# gop-report-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  extract.py  extract_gop.py  login.py  query.py  tests.py  to_excel.py
